--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ server.port = 10000
 
 # DB Information
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.2.131:3306/myDB
+spring.datasource.url=jdbc:mariadb://mariadb.cvsqqi8x8nw9.ap-northeast-2.rds.amazonaws.com/myDB
 
 # DB's ID
-spring.datasource.username=web_user
+spring.datasource.username=poly
 
 # DB's Password
-spring.datasource.password=1234
+spring.datasource.password=Poly01!
 
 # DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
@@ -23,7 +23,8 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # JSP Location
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.mvc.static-path-pattern=/resources/**
+#spring.mvc.static-path-pattern=/resources/**
+#spring.web.resources.static-locations=classpath:/resources/,classpath:/static/
 
 # MongoDB Connection
 spring.data.mongodb.host=192.168.111.129
