--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,17 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- JSP 및 static 자동 경로 설정 -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- JSP 서버 재시작 없이 바로 적용 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
     </dependencies>
