--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ server.port = 10000
 
 # DB Information
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://mariadb.cvsqqi8x8nw9.ap-northeast-2.rds.amazonaws.com/myDB
+spring.datasource.url=*
 
 # DB's ID
-spring.datasource.username=poly
+spring.datasource.username=*
 
 # DB's Password
-spring.datasource.password=Poly01!
+spring.datasource.password=*
 
 # DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
@@ -27,8 +27,8 @@ spring.mvc.view.suffix=.jsp
 #spring.web.resources.static-locations=classpath:/resources/,classpath:/static/
 
 # MongoDB Connection
-spring.data.mongodb.host=192.168.111.129
+spring.data.mongodb.host=*
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Math
-spring.data.mongodb.username=myUser
-spring.data.mongodb.password=1234
+spring.data.mongodb.username=*
+spring.data.mongodb.password=*
