--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
     </properties>
     <dependencies>
 
+        <!-- 데이터 전송시, 문자 깨지는 현상을 방지하기 위해 BASE64 인코딩 사용할 라이브러리 추가 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
+        <!-- 자바 메일 발송 라이브러리 -->
+        <dependency>
+            <groupId>javax-mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+
         <!-- 웹 크롤링을 위해 jsoup 외부라이브러리 추가 -->
         <dependency>
             <groupId>org.jsoup</groupId>
