--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 
         <!-- 자바 메일 발송 라이브러리 -->
         <dependency>
-            <groupId>javax-mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
+            <groupId>javamail</groupId>
+            <artifactId>javamail</artifactId>
+            <version>1.3.3</version>
         </dependency>
 
         <!-- 웹 크롤링을 위해 jsoup 외부라이브러리 추가 -->
@@ -94,6 +94,19 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
+        <!-- 자바 메일 발송 라이브러리 -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <!-- 데이터 전송 시, 문자가 깨지는 현상을 방지하기 위한 BASE64 인코딩 사용라이브러리 추가 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
 
     <build>
